@startuml
interface IAnchorCreator {
    + createNativeAnchor(gameObject:GameObject) : void
    + createCloudAnchor(gameObject:GameObject, propIndex:int) : Task<Result>
}
class Result {
}
class Success {
    + anchorIdentifier : string <<get>>
    + Success(anchorIdentifier:string)
}
class Failure {
    + exception : Exception? <<get>>
    + Failure(exception:Exception?)
}
IAnchorCreator +-- Result
Result +-- Success
Result <|-- Success
Result +-- Failure
Result <|-- Failure
@enduml
